Image path corrected

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1><pre><big><big>                         PORTFOLIO       </big> </big></pre></h1>
     <!--1st page will have Picture, Name,What you are doing, Where are you from, What are your interests, Your picture , Your interest, Hobbies and Passion.-->
     
-    <img src="/project2.html/profile-pic (6).png" alt="Display Picture" width="125" height="125">
+    <img src="profile-pic (6).png" alt="Display Picture" width="125" height="125">
     <p>I am Deepanshu Rana.</p><br>
     <p>Pursuing my b.tech in computer science from vellore institute of technology.</p><br>
     <p>I am from Mumbai,Maharashtra.</p><br>
