corrected go back and go to experience path

--- a/education.html
+++ b/education.html
@@ -33,8 +33,8 @@
 <p><pre>⚫️ In my high school, i won various olympiads like, ISO, IMO , IEO, NTSE, spellbee (2nd level).</pre></p>
 <p><pre>⚫️ I was also the captain of my schools Football Team and had won various tournaments like reliance, sfl, sfa, and won plenty of Highest Goal Scorer, MVP awards.</pre></p>
 
-<h3><pre>GO BACK                                                 GO TO EXPERIENCE </pre></h3>
-<a href="/project2.html/index.html">Home Page</a>                                                        <a href="/project2.html/experience.html">Experience</a>
+<h3><pre>GO BACK                                                                          GO TO EXPERIENCE </pre></h3>
+<a href="index.html">Home Page</a>                                                        <a href="xperience.html">Experience</a>
 </pre>
 </pre>
 </body>
