corrected go to home page and edu page path

--- a/experience.html
+++ b/experience.html
@@ -28,6 +28,6 @@
 
 </pr>
 <h3><pre>Go To Home Page                                     GO TO EDUCATION Page </pre></h3>
-<pre><a href="/project2.html/index.html">Home Page</a>                                                   <a href="/project2.html/education.html">EDUCATION PAGE</a></pre>
+<pre><a href="index.html">Home Page</a>                                                   <a href="education.html">EDUCATION PAGE</a></pre>
 </body>
 </html>
